# Financial-Agent

./: ETL_Palak.ipynb  budget_report.txt  p.py  pyproject.toml
Budgeting/: Agent.py  _init_.py  budgeting_workflow.py
Credit/: Agent.py  Prompt.py  _init_.py  credit_workflow.py
DEV/: main.py
DEV/AGENT/: agent.py
DEV/Embedding/: financial_embeddings.py
DEV/LLM/: llm_handler.py
DEV/Nodes/Generate/: generate_budget.py
DEV/Nodes/Grading/: budget_grading.py
DEV/Nodes/Retriever/: budget_retriever.py
DEV/Nodes/Routing/: routing_logic.py
DEV/models/: budget_models.py
DEV/prompt/: budget_prompts.py
DEV/state/: state_graph.py
Loan/: Agent.py  Prompt.py  _init_.py  loan_workflow.py
app/agents/: __init__.py  budget_agent.py  create_workflow.py  main.py
app/llm/: llm.py
app/node/: hf.py  retriver.py  routing.py
app/prompt/: budget_prompt.py
app/state/: state-graph.py
